tests/reject/classDynamicNew.emojic
🐇 🐟 🍇
  🐈 🆕 🍇🍉

  🐖 🙋 🍇
    😀 🔤I’m a fish.🔤
  🍉
🍉

🐇 🐡 🐟 🍇
  🐈 😑 🍇
    🐐 🆕
  🍉

  ✒️  🐖 🙋 🍇
    😀 🔤I’m a blowfish.🔤
  🍉
🍉

🏁 🍇
  🍦 type 🔳🐟
  🍦 fish 🔷⬛️ type 🆕
  🙋 fish
🍉
